# logger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
logger/: CMakeLists.txt
logger/include/: console_sink.hpp  file_sink.hpp  log_sink.hpp  logger.hpp
logger/src/: logger.cpp
logs/: app_log.txt
